--- a/sentences.html
+++ b/sentences.html
@@ -1,12 +1,18 @@
 <html>
-  <head>
-  "CORGIS Data Research Cars Dataset"
-  </head>
-  <body>
-  The 2011 Ford Fiesta Sedan gets the best miles per gallon while driving in cities. 
-  <br>
-  The most recent cars in this dataset are 2012 models. There are over 1,000 of them. 
-  <br>
-  28.5% (1,127) of the cars have manual transmissions. The other 71.5% (3,949) have automatic transmissions.
-  </body>
+ <head><title>CORGIS Data Research Cars Dataset/title></head>
+ <body>
+  
+   <p>
+    The 2011 Ford Fiesta Sedan gets the best miles per gallon while driving in cities. 
+   </p>
+   
+   <p>
+     The most recent cars in this dataset are 2012 models. There are over 1,000 of them.
+  </p>
+   
+   <p>
+     28.5% (1,127) of the cars have manual transmissions. The other 71.5% (3,949) have automatic transmissions.
+   </p>
+ </body>
 </html>
+
