--- a/sentences.html
+++ b/sentences.html
@@ -1,5 +1,5 @@
 <html>
- <head><title>CORGIS Data Research Cars Dataset/title></head>
+ <head><title>CORGIS Data Research Cars Dataset</title></head>
  <body>
   
    <p>
