--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
  <head><title>CORGIS Data Research Cars Dataset</title></head>
  <body>
   
-   <p> id = "MPG"
+   <p id = "MPG"> 
     The 2011 Ford Fiesta Sedan gets the best miles per gallon while driving in cities. 
    </p>
    
-   <p> id = "Year"
+   <p id = "Year"> 
      The most recent cars in this dataset are 2012 models. There are over 1,000 of them.
   </p>
    
-   <p> id = "Transmission"
+   <p id = "Transmission"> 
      28.5% (1,127) of the cars have manual transmissions. The other 71.5% (3,949) have automatic transmissions.
    </p>
  </body>
