--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
- <head><title>CORGIS Data Research Cars Dataset</title></head> <link href="style.css" rel="stylesheet" type="text/css"/> </head>
+ <head><title>CORGIS Data Research Cars Dataset</title><link href="style.css" rel="stylesheet" type="text/css"/> </head></head> 
  <body>
   
    <p id = "MPG"> 
