--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      28.5% (1,127) of the cars have manual transmissions. The other 71.5% (3,949) have automatic transmissions.
    </p>
   
-  <p>
+  <p id = "Source">
     All of these statistics were pulled directly from the dataset.
   </p>
  </body>
