--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
    <p id = "MPG"> 
     The 2011 Ford Fiesta Sedan gets the best miles per gallon while driving in cities. 
    </p>
-   
+   <img src = "2011-ford-fiesta-sedan.jpg" alt = "fiesta">
+  <p id = "Img-1-Credit">
+   Image credit: https://www.greencarreports.com/news/1045285_2011-ford-fiesta-another-good-reason-to-buy-one
+  </p>
    <p id = "Year"> 
      The most recent cars in this dataset are 2012 models. There are over 1,000 of them.
   </p>
