--- a/index.html
+++ b/index.html
@@ -2,21 +2,35 @@
 <html>
  <head><title>CORGIS Data Research Cars Dataset</title><link href="style.css" rel="stylesheet" type="text/css"/></head> 
  <body>
+  <h1 id = "Header"> Facts from Cars dataset. </h1>
   
-   <p id = "MPG"> 
+  <p id = "MPG"> 
     The 2011 Ford Fiesta Sedan gets the best miles per gallon while driving in cities. 
    </p>
-   <img src = "2011-ford-fiesta-sedan.jpg" alt = "fiesta">
+  
+  <img src = "2011-ford-fiesta-sedan.jpg" alt = "fiesta">
   <p id = "Img-1-Credit">
    Image credit: https://www.greencarreports.com/news/1045285_2011-ford-fiesta-another-good-reason-to-buy-one
   </p>
-   <p id = "Year"> 
+   
+  <p id = "Year"> 
      The most recent cars in this dataset are 2012 models. There are over 1,000 of them.
   </p>
-   
+  
+  <img src = "2012-cars.jpg" alt = "2012 cars">
+  <p id = "Img-2-Credit">
+   Image credit: https://www.autoguide.com/car-comparisons/2012-ford-mustang-gt-vs-2012-chevy-camaro-ss-1930.html
+  </p>
+  
    <p id = "Transmission"> 
      28.5% (1,127) of the cars have manual transmissions. The other 71.5% (3,949) have automatic transmissions.
    </p>
+   
+   <img src = "manual-automatic.jpg" alt = "Transmission">
+   <p id = "Img-3-Credit">
+    Image credit: http://www.drivearmy.com/manual-vs-automatic-transmission/
+   </p>
+ 
   
   <p id = "Source">
     All of these statistics were pulled directly from the dataset.
